Version 4.1.5.3
Change provide to convert an exported rename transformer to its
 free-identifier=? target
Add 'not-free-identifier=? syntax property to disable free-identifier=? 
 propagation through a rename transformer
Add prop:rename-transformer and prop:set!-transformer
Fix scheme/local so that local syntax bindings are visible to later
 local definitions

Version 4.1.5.2
Changed expander to detect a reaname transformer and install a
 free-identifier=? syntax-object equivalence

Version 4.1.5, March 2009
Allow infix notation for prefab structure literals
Change quasiquote so that unquote works in value positions of #hash
Change read-syntax to represent #hash value forms as syntax
Added bitwise-bit-field

Version 4.1.4, January 2009
Changed memory accounting to bias charges to parent instead of children
Changed function contracts to preserve tail recursion in many cases
Added scheme/package, scheme/splicing, ffi/objc
Added exception-backtrace support for x86_84+JIT
Added equal?/recur
Added equal<%> and interface* to scheme/class
Added procedure-rename
Added extra arguments to call-with-continuation-prompt
Added extra argument to raise-syntax-error
Added compile-context-preservation-enabled
Added syntax-local-lift-require
Added internal-definition-context-seal, which must be used on an
 internal-definition context before it's part of a fully expanded form
Added syntax-local-make-delta-introducer
Changed make-rename-transformer to accept an introducer argument that
 cooperates with syntax-local-make-delta-introducer
Added internal-defininition-context?
Added identifier-remove-from-defininition-context

Version 4.1.3, November 2008
Changed scheme to re-export scheme/port
In scheme/port: added 
Added call-with-immediate-continuation-mark
In scheme/port: added port->string, port->bytes, port->lines
 port->bytes-lines, display-lines, [call-]with-input-from-{string,bytes},
 and [call-]with-output-to-{string,bytes}